[project]
name = "speech-to-text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.8",
    "langchain-groq>=1.0.1",
    "pydub>=0.25.1",
    "spacy>=3.8.11",
    "speechrecognition>=3.14.4",
    "transformers>=4.57.1",
]
